<resources>
    <string name="app_name">Sauna Manager</string>
    <string name="action_settings">Settings</string>
    <string name="initial_message">Messages will go here.</string>
    <string name="edit_file">Enter URL of file</string>
    <string name="button_display">Import List</string>
    <string name="text_main">List will be displayed here.</string>

    <string name="opt1">1- Display list</string>
    <string name="opt2">2- Load list from file</string>
    <string name="opt3">3- Add a new sauna</string>
    <string name="opt4">4- Show details of a sauna</string>
    <string name="opt5">5- Remove a sauna</string>
    <string name="opt6">6- Adjust price of sauna (by a %)</string>
    <string name="opt7">7- Show all saunas with a given capacity</string>
    <string name="opt8">8- Show the median price of the saunas</string>
    <string name="opt9">9- Save list to file</string>

    <string name="opt3.make">Make: </string>
    <string name="opt3.code">Product Code: </string>
    <string name="opt3.woodType">Wood Type: </string>
    <string name="opt3.capacity">Capacity: </string>
    <string name="opt3.heating">Kind of Heating: </string>
    <string name="opt3.price">Price: </string>
    <string name="opt3.img">Image URL: </string>


</resources>